assets/css/styles.css
/*General Styles*/

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font: normal 16px sans-serif;
	color: #fff;
}

ul,
nav {
	list-style: none;
}

a {
	text-decoration: none;
	color: #333;
}

a.btn {
	border-radius: 4px;
	text-transform: uppercase;
	font-weight: bold;
	text-align: center;
	background-color: rgb(0, 0, 0);
	color: #fff;
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 100px 80px;
}

section:not(.hero):nth-child(even) {
	background-color: #fff;
}

.grid {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	color: #333;
}

hr {
	width: 250px;
	height: 3px;
	background-color: #3f51b5;
	border: 0;
	margin-bottom: 50px;
}

section h3.title {
	text-transform: capitalize;
	font: bold 32px "Open Sans", sans-serif;
	margin-bottom: 30px;
	text-align: center;
}


/* -------------------Screen Wipe-------------------------- */

.screen-wipe-top {
	width: 100%;
	height: 100vh;
	background: rgb(0, 0, 0);
	position: fixed;
	z-index: 1000;
	top: -100%;
}

.screen-wipe-bottom {
	width: 100%;
	height: 100vh;
	background: rgb(0, 0, 0);
	position: fixed;
	z-index: 1000;
	bottom: -100%;
}

/*Header Styles*/

.header-home {
	position: absolute;
	width: 100%;
	display: inline-block;
	padding: 40px;
}

.header-logo {
	display: inline-block;
	width: 50px;
}

.logo img {
	width: 100%;
}

.reveal {
	position: relative;
	width: 7em;
	margin: 0 auto;
}

/* ------------------Menu --------------*/

.nav-icon {
	width: 2rem;
	height: 1.2rem;
	top: 2.5rem;
	right: 2rem;
	position: absolute;
	transition: .5s ease-in-out;
	cursor: pointer;
	margin-top: 7px;
	z-index: 15000;
}

.nav-icon span {
	display: block;
	position: absolute;
	height: 2px;
	width: 100%;
	background: rgb(0, 0, 0);
	opacity: 1;
	transition: .25s ease-in-out;
}

.nav-icon span:nth-child(1) {
	top: 0rem;
}

.nav-icon span:nth-child(2) {
	top: .5rem;
}

.nav-icon span:nth-child(3) {
	top: 1rem;
	width: 60%;
	right: 0;
}

.nav-icon:hover span:nth-child(3) {
	width: 100%;
}


/*------------------------ 2.1 Full Menu ------------------------*/

.full-menu {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 10;
	height: 100%;
	width: 100%;
	overflow: hidden;
	background-size: cover;
	opacity: 0;
	visibility: hidden;
	transition: opacity 0.3s 0s, visibility 0s 0.3s;
}

/* Full Menu */

.full-menu .modal-close {
	/* 'X' icon */
	position: absolute;
	z-index: 15;
	top: 0;
	right: 0;
	padding: 50px;
	height: 45px;
	width: 45px;
	border-radius: 50%;
	background: rgba(0, 0, 0, 0.3) url(cd-icon-close.svg)no-repeat center center;
	overflow: hidden;
	text-indent: 100%;
	white-space: nowrap;
	visibility: hidden;
	opacity: 0;
	transform: scale(0);
	visibility: 0s 0.3s,
		opacity 0.3s 0s;
	transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
}

.no-touch .full-menu .modal-close:hover {
	background-color: rgba(0, 0, 0, 0.5);
}

.full-menu.visible {
	background-size: 100%;
	opacity: 1;
	visibility: visible;
	transition: opacity 0.7s, visibility 0s;
}

.full-menu.visible .fullmenu-content {
	-webkit-overflow-scrolling: touch;
}

.full-menu.visible .modal-close {
	visibility: visible;
	opacity: 1;
	transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
	transform: scale(1);
}

@media only screen and (min-width: 1100px) {
	.full-menu .fullmenu-content {
		padding: 6em 5%;
	}

	.full-menu .modal-close {
		height: 60px;
		width: 60px;
	}

	.full-menu p {
		font-size: 25px;
	}
}

.cd-transition-layer {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 2;
	height: 100%;
	width: 100%;
	opacity: 0;
	visibility: hidden;
	overflow: hidden;
}

.cd-transition-layer .bg-layer {
	position: absolute;
	left: 50%;
	top: 50%;
	-webkit-transform: translateY(-50%) translateX(-2%);
	transform: translateY(-50%) translateX(-2%);
	height: 100%;
	/* our sprite is composed of 25 frames */
	width: 2500%;
	background: url(ink.png) no-repeat 0 0;
	background-size: 100% 100%;
}

.cd-transition-layer.visible {
	opacity: 1;
	visibility: visible;
}

.cd-transition-layer.opening .bg-layer {
	animation: cd-sequence 1.0s steps(24);
	animation-fill-mode: forwards;
}

.cd-transition-layer.closing .bg-layer {
	animation: cd-sequence-reverse 1.0s steps(24);
	animation-fill-mode: forwards;
}

.no-cssanimations .cd-transition-layer {
	display: none;
}


@keyframes cd-sequence {
	0% {
		transform: translateY(-50%) translateX(-2%);
	}

	100% {
		transform: translateY(-50%) translateX(-98%);
	}
}




@keyframes cd-sequence-reverse {
	0% {

		transform: translateY(-50%) translateX(-98%);
	}

	100% {

		transform: translateY(-50%) translateX(-2%);
	}
}


/*------------------------ 2.2 Header ------------------------*/

.full-menu .fullmenu-content {
	height: 100%;
	width: 100%;
	display: table;
}

.page-menu {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

.page-menu li {
	line-height: 50px;
	margin-left: -25px;
}

.page-menu li:last-child {
	line-height: 90px;
}

.page-menu li a {
	color: rgb(255, 255, 255);
	font-size: 26px;
	position: relative;
	font-weight: 500;

}

.social img {
	width: 15px;
}

.main .social {
	margin-top: 30px;
}

.social a {
	margin-right: 20px;
}

.social a:hover img {
	opacity: .6;
	transition: all ease 0.3s;
}

.social a:last-child {
	margin-right: 0px;
}


/* -------------HERO--------------------- */

.reveal span {
	opacity: 0;
	animation: reveal 0.0001s linear forwards;
	animation-delay: 1.4s
}

.reveal:after {
	content: "";
	top: 0;
	left: 0;
	position: absolute;
	width: 0%;
	height: 100%;
	background: #333;
	animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
	animation-delay: 1s;
}

@keyframes revealing {
	0% {
		left: 0;
		width: 0%;
	}

	50% {
		left: 0;
		width: 100%
	}

	100% {
		left: 100%;
		width: 0%;
	}
}

@keyframes reveal {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

#revTwo {
	width: 7.5em;
	margin-bottom: 5rem;
}

#revTwo span {
	animation-delay: 2s;
}

#revTwo.reveal:after {
	background: #333;
	animation-delay: 1.4s;
}

header nav {
	display: flex;
	margin-right: -15px;
}

header nav li {
	margin: 0 15px;
}

/*Hero Styles*/

.side__bar {
	transform: rotate(90deg);
	text-transform: uppercase;
	letter-spacing: 3px;
	font-size: 0.8em;
	margin: 0 auto;
	position: absolute;
	left: -20px;
	top: 50%;
	width: 140px;
	color: #9ea0a6;
	opacity: 0.6;
}

.hero {
	position: relative;
	justify-content: center;
	text-align: center;
	min-height: 100vh;
	color: #333;
}

.hero .background-image {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-size: cover;
	z-index: -1;
	background-color: #fff;
}

.hero h1 {
	font: bold 60px "Open Sans", sans-serif;
}

.hero h3 {
	font: normal 28px "Open Sans", sans-serif;
	margin-bottom: 40px;
}

.hero-content-area {
	width: 100%;
}

.typer:before {
	content: "\2014 ";
	padding: 10px;
}

.typing {
	opacity: 0;
	animation: appear 0.8s ease-in forwards;
	animation-delay: 2.6s;
}

@keyframes appear {
	0% {
		opacity: 0;
	}

	100% {
		opacity: .9;
	}
}

/*Destinations Section*/

.destinations .grid li {
	height: 350px;
	padding: 20px;
	background-clip: content-box;
	background-size: cover;
	background-position: center;
}

.destinations .grid li.small {
	flex-basis: 30%;
}

.destinations .grid li.large {
	flex-basis: 70%;
}

/*Packages Section*/

.packages .grid li {
	padding: 50px;
	flex-basis: 50%;
	text-align: center;
}

.packages .grid li i {
	color: #8c9eff;
}

.packages .grid li h4 {
	font-size: 30px;
	margin: 25px 0;
}

/*Testimonials Section*/

.testimonials .quote {
	font-size: 22px;
	font-weight: 300;
	line-height: 1.5;
	margin: 40px 0 25px;
}

/*Contact Section*/

.contact form {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
	width: 60%;
}

.contact form .btn {
	padding: 18px 42px;
}

.contact form input {
	padding: 15px;
	margin-right: 30px;
	font-size: 18px;
	color: #555;
	flex: 1;
}

/*Footer Section*/

footer {
	display: flex;
	align-items: center;
	justify-content: space-around;
	background-color: #607d8b;
	color: #fff;
	padding: 20px 0;
}

footer ul {
	display: flex;
}

footer ul li {
	margin-left: 16px;
}

footer p {
	text-transform: uppercase;
	font-size: 14px;
	opacity: 0.6;
	align-self: center;
}

@media (max-width: 1100px) {

	.destinations .grid li.small,
	.destinations .grid li.large {
		flex-basis: 50%;
	}

	footer {
		flex-direction: column;
	}

	footer p {
		text-align: center;
		margin-bottom: 20px;
	}

	footer ul li {
		margin: 0 8px;
	}
}

@media (max-width: 1000px) {
	.contact form input {
		flex-basis: 100%;
		margin: 0 0 20px 0;
	}
}

@media (max-width: 800px) {
	section {
		padding: 50px 20px;
	}

	header {
		padding: 20px 50px;
		flex-direction: column;
	}

	header h2 {
		margin-bottom: 15px;
	}

	.hero {
		min-height: 600px;
	}

	.hero h1 {
		font-size: 48px;
	}

	.hero h3 {
		font-size: 24px;
	}

	.destinations .grid li.small,
	.destinations .grid li.large {
		flex-basis: 100%;
	}

	.packages .grid li {
		flex-basis: 100%;
		padding: 20px;
	}

	.testimonials .quote {
		font-size: 18px;
		margin: 15px 0;
	}
}

